--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/piotpap663/cookieclick#readme",
   "dependencies": {
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.0",
     "webpack-dev-server": "^2.9.7"
   },
   "devDependencies": {
