--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/piotpap663/cookieclick#readme",
   "dependencies": {
     "css-loader": "^0.28.7",
+    "eslint": "^4.12.1",
     "style-loader": "^0.19.0",
     "webpack-dev-server": "^2.9.7"
   },
