--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
   "homepage": "https://github.com/piotpap663/cookieclick#readme",
   "dependencies": {
     "css-loader": "^0.28.7",
-    "eslint": "^4.12.1",
+    "eslint": "^4.13.1",
+    "eslint-plugin-import": "^2.8.0",
     "style-loader": "^0.19.0",
     "webpack-dev-server": "^2.9.7"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "webpack": "^3.10.0"
   }
 }
