--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.13.1",
     "eslint-plugin-import": "^2.8.0",
-    "style-loader": "^0.19.0",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "webpack-dev-server": "^2.9.7"
   },
   "devDependencies": {
